# document-bert

./: setup.cfg
document-bert/: LICENSE
document-bert/document-search/: Embeddings.py  ParagraphExtraction.py  README.md  Untitled.ipynb  bert_demo.ipynb  bert_document_similarity_predict.ipynb  bert_document_similarity_train.ipynb  clean.py  encode.py
document_bert/document-search/: bert_document_similarity_train_and_predict.ipynb  model_utils.py  pdf2word_converter.py  requirements.txt
document_bert/document_search/: BERTSimilarity.py  EP1191760B1.docx  ElasticsearchVector.py  encode.py  model_utils.py  patent_utils.py
