[metadata]
name = document-bert
version = 0.0.1
author = Chaine San Buenaventura
author_email = chainesanbuenaventura9@gmail.com
description = For fine-tuning BERT to different document-based tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chainesanbuenaventura/document-bert
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
